<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:backgroundTint="@color/colorPrimaryDark"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:srcCompat="@drawable/manus1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-6dp" />

    <TextView
        android:id="@+id/profileDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/profileStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_user_status"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileDisplayName"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/profileFriendsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_friends"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileStatus"
        app:layout_constraintVertical_bias="0.232" />

    <Button
        android:id="@+id/profileSendReqBtn"
        android:layout_width="220dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/colorAccent"
        android:text="Send Friend Request"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileFriendsCount"
        app:layout_constraintVertical_bias="0.208" />

    <Button
        android:id="@+id/profileDeclineReqBtn"
        android:layout_width="222dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/colorAccent"
        android:text="Decline Friend Request"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileFriendsCount"
        app:layout_constraintVertical_bias="0.726" />

</androidx.constraintlayout.widget.ConstraintLayout>